tests/sksl/errors/LayoutMultiplePrimitiveTypes.dsl.glsl
### Compilation failed:

error: 'points' is not a valid layout qualifier
error: 'lines' is not a valid layout qualifier
error: 'line_strip' is not a valid layout qualifier
error: 'lines_adjacency' is not a valid layout qualifier
error: 'triangles' is not a valid layout qualifier
error: 'triangle_strip' is not a valid layout qualifier
error: modifiers declarations are not yet supported
error: expected a type, but found ';'
8 errors
